@@ -228,6 +228,8 @@
 	<td class="tdchange" colspan=2>
 		<ul>
 			<li>.components.schemas."dbv0.0.38_config_info".properties.tres</li>
+			<li>.components.schemas."dbv0.0.38".properties.het.properties.job_id</li>
+			<li>.components.schemas."dbv0.0.38".properties.het.properties.job_offset</li>
 		</ul>
 	</td>
 </tr>
