@@ -122,6 +122,7 @@ documents those changes that are of interest to users and administrators.
     in openapi.json.
  -- openapi/dbv0.0.38 - Add missing field for name in qos list in openapi.json.
  -- openapi/dbv0.0.38 - Correct tres field in qos list in openapi.json.
+ -- openapi/dbv0.0.38 - Correct het job details types in jobs in openapi.json
 
 * Changes in Slurm 21.08.7
 ==========================
